# OpenGLCore

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
CMake/: Export.h.in  ExportFunction.cmake  files_group.cmake  resource_copy.cmake
Context/: CMakeLists.txt
Context/include/: ContextExport.h  GLFunctions.h  IWindow.hpp  OpenGLContext.hpp  RenderContext.hpp
Context/src/: GLFunction.cpp  OpenGLContext.cpp
Object/: CMakeLists.txt
Object/include/: CMakeLists.txt  FrameBuffer.h  ObjectExport.h  ShaderProgram.h  ShaderProgramManager.h  ShaderUtils.h  Texture2DObject.h  VertexIndexBuffer.h  Vertices.h
Object/src/: FrameBuffer.cpp  ShaderProgram.cpp  ShaderProgramManager.cpp  ShaderUtils.cpp  Texture2DObject.cpp  VertexIndexBuffer.cpp
Testing/: CMakeLists.txt  ObjectCreateTest.cpp  OpenGLWindow.cpp  OpenGLWindow.h
Testing/shader/: Line.geom  Line.vert  line.frag  quad.frag  quad.vert
